--- a/dtc/Gemfile
+++ b/dtc/Gemfile
@@ -42,6 +42,9 @@ group :development do
 	gem 'rspec-rails'
 end
 
+gem 'capybara'
+gem 'devise'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.1.2'
 
